# pywright

./: .gitignore  Dockerfile  pyproject.toml
src/pywright/: __init__.py  browser.py
