[project]
name = "pywright"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Christie", email = "david.christie@mediaradar.com" }
]
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.57.0",
]

[project.scripts]
pywright = "pywright:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
